syntax = "proto3";

package com.owncloud.ocis.search.v0;

option go_package = "github.com/owncloud/ocis/search/pkg/proto/v0;proto";

import "protoc-gen-openapiv2/options/annotations.proto";

option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
  info: {
    title: "ownCloud Infinite Scale search";
    version: "1.0.0";
    contact: {
      name: "ownCloud GmbH";
      url: "https://github.com/owncloud/ocis";
      email: "support@owncloud.com";
    };
    license: {
      name: "Apache-2.0";
      url: "https://github.com/owncloud/ocis/blob/master/LICENSE";
    };
  };
  schemes: HTTP;
  schemes: HTTPS;
  consumes: "application/json";
  produces: "application/json";
  external_docs: {
    description: "Developer Manual";
    url: "https://owncloud.dev/extensions/search/";
  };
};

service Search {
    rpc Search(SearchRequest) returns (SearchResponse) {};
    rpc Index(IndexRequest) returns (IndexResponse) {};
}

message Term {
	// type of value e.g string, int, int64, bool, float64
	string type = 1;
	// the actual value
	string value = 2;
}

message Record {
	// type of file eg. File, Path
	string type = 1;
	// the relative file name in the space^
	string fileName = 2;
	// the space Id
	string spaceId = 3;
}

message SearchRequest {
    Term searchterm = 1;
}

message SearchResponse {
	repeated Record records = 1;
}

message IndexRequest {
    Term indexfile = 1;
}

message IndexResponse {

}
